--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </section>
     <!-- section team -->
     <section id="team">
-        <div class="container">
+        <div class="container container-fluid">
             <h1 class="text-uppercase section-title">Our amazing Team</h1>
             <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             <div class="row">
@@ -272,10 +272,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-12 parrafo-team">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et consequuntur nulla sunt dolor beatae veniam, ipsam delectus porro omnis nobis, adipisci accusamus maiores perferendis dolorem ullam ea assumenda aliquam laboriosam.
                 </div>
             </div>
+    </section>
+    <section>
+            <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-3">
                     <img src="assets/img/envato.jpg" alt="" class="img-responsive">
@@ -289,6 +292,7 @@
                 <div class="col-sm-3">
                     <img src="assets/img/creative-market.jpg" alt="" class="img-responsive">
                 </div>
+            </div>
             </div>
         </div>
     </section>
