--- a/index.html
+++ b/index.html
@@ -200,24 +200,24 @@
                     <h4>Kay Garland</h4>
                     <p>Laid Designer</p>
                     <ul class="list-inline btn-social">
-                    	<li>
-                    	<a href="" class="fa-stack fa-lg">
+                        <li>
+                            <a href="" class="fa-stack fa-lg">
                     		<i class="fa fa-circle fa-stack-2x"></i>
                     		<i class="fa fa-fw fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>                    
                     	</a>
-                    	</li>
-                    	<li>
-                    	<a href="" class="fa-stack fa-lg">
+                        </li>
+                        <li>
+                            <a href="" class="fa-stack fa-lg">
                     		<i class="fa fa-circle fa-stack-2x"></i>
                     		<i class="fa fa-fw fa-facebook fa-stack-1x fa-inverse" aria-hidden="true"></i>                    
                     	</a>
-                    	</li>
-                    	<li>
-                    	<a href="" class="fa-stack fa-lg">
+                        </li>
+                        <li>
+                            <a href="" class="fa-stack fa-lg">
                     		<i class="fa fa-circle fa-stack-2x"></i>
                     		<i class="fa fa-fw fa-linkedin fa-stack-1x fa-inverse" aria-hidden="true"></i>                    
                     	</a>
-                    	</li>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-sm-4">
@@ -225,24 +225,24 @@
                     <h4>Larry Parker</h4>
                     <p>Laid Marketer</p>
                     <ul class="list-inline btn-social">
-                    	<li>
-                    	<a href="" class="fa-stack fa-lg">
+                        <li>
+                            <a href="" class="fa-stack fa-lg">
                     		<i class="fa fa-circle fa-stack-2x"></i>
                     		<i class="fa fa-fw fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>                    
                     	</a>
-                    	</li>
-                    	<li>
-                    	<a href="" class="fa-stack fa-lg">
+                        </li>
+                        <li>
+                            <a href="" class="fa-stack fa-lg">
                     		<i class="fa fa-circle fa-stack-2x"></i>
                     		<i class="fa fa-fw fa-facebook fa-stack-1x fa-inverse" aria-hidden="true"></i>                    
                     	</a>
-                    	</li>
-                    	<li>
-                    	<a href="" class="fa-stack fa-lg">
+                        </li>
+                        <li>
+                            <a href="" class="fa-stack fa-lg">
                     		<i class="fa fa-circle fa-stack-2x"></i>
                     		<i class="fa fa-fw fa-linkedin fa-stack-1x fa-inverse" aria-hidden="true"></i>                    
                     	</a>
-                    	</li>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-sm-4">
@@ -250,24 +250,24 @@
                     <h4>Diana Pertersen</h4>
                     <p>Laid Developer</p>
                     <ul class="list-inline btn-social">
-                    	<li>
-                    	<a href="" class="fa-stack fa-lg">
+                        <li>
+                            <a href="" class="fa-stack fa-lg">
                     		<i class="fa fa-circle fa-stack-2x"></i>
                     		<i class="fa fa-fw fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>                    
                     	</a>
-                    	</li>
-                    	<li>
-                    	<a href="" class="fa-stack fa-lg">
+                        </li>
+                        <li>
+                            <a href="" class="fa-stack fa-lg">
                     		<i class="fa fa-circle fa-stack-2x"></i>
                     		<i class="fa fa-fw fa-facebook fa-stack-1x fa-inverse" aria-hidden="true"></i>                    
                     	</a>
-                    	</li>
-                    	<li>
-                    	<a href="" class="fa-stack fa-lg">
+                        </li>
+                        <li>
+                            <a href="" class="fa-stack fa-lg">
                     		<i class="fa fa-circle fa-stack-2x"></i>
                     		<i class="fa fa-fw fa-linkedin fa-stack-1x fa-inverse" aria-hidden="true"></i>                    
                     	</a>
-                    	</li>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -277,8 +277,8 @@
                 </div>
             </div>
     </section>
-    <section>
-            <div class="container-fluid">
+    <section class="logos-team">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-3">
                     <img src="assets/img/envato.jpg" alt="" class="img-responsive">
@@ -293,7 +293,7 @@
                     <img src="assets/img/creative-market.jpg" alt="" class="img-responsive">
                 </div>
             </div>
-            </div>
+        </div>
         </div>
     </section>
     <section id="contact">
